Bug 1279036 - retrieve CMSampleBuffer via CMSampleBufferGetDataBuffer for mjpeg case. r=jib